[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
structopt = "0.3.26"
rayon = "1.5.1"
anyhow = "1.0.53"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tokio-stream = "0.1.8"
futures = "0.3.21"
futures-util = "0.3.21"
crossbeam = "0.8.1"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
ansi_term = "0.12.1"
tempfile = "3.2"
#libc = "0.2"

[dependencies.snarkvm]
git = "https://github.com/AleoNet/snarkVM.git"
rev = "d170a9f"
features = ["console"]

[dependencies.tokio]
version = "1.16.1"
features = ["rt-multi-thread", "macros", "sync", "signal"]

[dependencies.tokio-util]
version = "0.7.0"
features = ["codec"]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[patch."https://github.com/AleoNet/snarkVM.git"]
snarkvm = { git = "https://github.com/scuwan/snarkVM.git", branch = "6block" }
